--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,151 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="css/styles.min.css">
+
 	<title>Grow Up Sells</title>
 </head>
 
 <body>
-	<h1>Grow Up Sells</h1>
+
+
+	<header class="header container">
+		<a href="" class="header__logo">HelloUI</a>
+		<div class="header__nav">
+			<a href="#">Docs</a>
+			<a href="#">Tools</a>
+			<a href="#">Features</a>
+			<a href="#">Pricing</a>
+			<a href="#">Jobs</a>
+		</div>
+		<div class="header__login">
+			<a href="#">Sign in</a>
+			<button class="button">Try for Free</button>
+		</div>
+	</header>
+
+
+	<div class="title container">
+		<h1 class="title__title">Grow up your sells<br>with us.</h1>
+		<h3 class="title__subtitle">Build one project that runs natively on all your term now<br>users' devices to turn
+			for that you can do.</h3>
+		<div class="title__buttons">
+			<button class="button title__button">Try for Free</button>
+			<button class="button button__reverse title__button">Discover in Video</button>
+		</div>
+
+		<div class="title__images">
+			<img src="img/title__left.png" alt="">
+			<img class="shadow" src="img/title__main.png" alt="">
+			<img src="img/title__right.png" alt="">
+		</div>
+	</div>
+
+
+	<div class="clients">
+		<p>More than 1.8 million people across 50,000 companies choose Spellon</p>
+		<div class="clients_slider">
+			<a href=""><img src="img/clients__jll.png" alt=""></a>
+			<a href=""><img src="img/clients__netflix.png" alt=""></a>
+			<a href=""><img src="img/clients__hubspot.png" alt=""></a>
+			<a href=""><img src="img/clients__atlassian.png" alt=""></a>
+			<a href=""><img src="img/clients__juniper.png" alt=""></a>
+			<a href=""><img src="img/clients__lacoste.png" alt=""></a>
+		</div>
+	</div>
+
+
+	<div class="line"></div>
+
+
+	<div class="about">
+		<div class="about__title">Award-winning logistics services.Powered by
+			technology, delivered by experts.</div>
+		<div class="about__subtitle">Businesses are leaving money on the table every day due to missed supply chain
+			opportunities. Zencargo unlocks your potential with digital freight forwarding that drives cost savings and
+			revenue improvements for your business.</div>
+		<button class="button about__button">See How Spellon Work</button>
+
+		<div class="about__features">
+			<div class="features__element">
+				<h2></h2>
+				<p></p>
+				<a href="#"></a>
+				<img src="img/about__develop.png" alt="">
+			</div>
+			<div class="features__element">
+				<img src="img/about__build.png" alt="">
+				<h2></h2>
+				<p></p>
+				<a href="#"></a>
+			</div>
+			<div class="features__element">
+				<h2></h2>
+				<p></p>
+				<a href="#"></a>
+				<img src="img/about__update.png" alt="">
+			</div>
+		</div>
+	</div>
+
+
+	<div class="testimonials">
+		<div class="testimonials__uptitle">Over 2000 businesses, marketers and creatives use Suparise to grow their
+			Instagram.</div>
+		<h2 class="testimonials__title">Don’t just take our word for it</h2>
+
+		<div class="testimonials__tweets">
+			<img src="img/tweet_1.png" alt="" class="testimonials__tweet">
+			<img src="img/tweet_2.png" alt="" class="testimonials__tweet">
+			<img src="img/tweet_3.png" alt="" class="testimonials__tweet">
+			<img src="img/tweet_4.png" alt="" class="testimonials__tweet">
+			<img src="img/tweet_5.png" alt="" class="testimonials__tweet">
+			<img src="img/tweet_6.png" alt="" class="testimonials__tweet">
+		</div>
+	</div>
+
+
+	<footer class="footer">
+		<h2 class="footer__title">It’s easy to get
+			started. Start now.</h2>
+		<div class="footer__input"></div>
+
+		<div class="footer__contacts">
+			<div class="contacts__title">Spellon.</div>
+			<div class="contacts__subtitle">Nort West, South New Work,United State</div>
+			<div class="contacts__subtitle">+1 246-254-0569</div>
+			<div class="contacts__subtitle">Info@example.com</div>
+			<div class="contacts__links">
+				<a href="#"><img src="img/svg/fb.svg" alt=""></a>
+				<a href="#"><img src="img/svg/bask.svg" alt=""></a>
+				<a href="#"><img src="img/svg/be.svg" alt=""></a>
+			</div>
+		</div>
+		<div class="footer__nav">
+			<div class="footer__resources">Resources
+				<a href="#">Docs</a>
+				<a href="#">Forums</a>
+				<a href="#">Jobs</a>
+				<a href="#">Join Discord</a>
+				<a href="#">Consultants</a>
+			</div>
+			<div class="footer__company">Company
+				<a href="#">About Us</a>
+				<a href="#">Careers</a>
+				<a href="#">Block Chain</a>
+				<a href="#">Privacy Policy</a>
+				<a href="#">Terms & Condition</a>
+			</div>
+			<div class="footer__legal">Legal
+				<a href="#">Terms of use</a>
+				<a href="#">Privacy policy</a>
+				<a href="#">GDPR/CCPA explained</a>
+				<a href="#">Guidlines</a>
+			</div>
+		</div>
+		<div class="footer__copyright"><img src="img/svg/copyright.svg" alt=""> 2021 Hello All right reserved.</div>
+	</footer>
+
 </body>
 
 </html>
