--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.min.css">
+	<link rel="stylesheet" href="https://i.icomoon.io/public/temp/97714392b1/UntitledProject/style.css">
 
 	<title>Grow Up Sells</title>
 </head>
@@ -132,48 +134,62 @@
 		</div>
 	</div>
 
-	<footer class="footer">
-		<div class="container">
-			<h2 class="footer__title">It’s easy to get
-				started. Start now.</h2>
-			<div class="footer__input"></div>
+	<div class="footer">
+		<div class="footer__container">
+			<h2 class="footer__title">It’s easy to get<br>started. Start now.</h2>
 
-			<div class="footer__contacts">
-				<div class="contacts__title">Spellon.</div>
-				<div class="contacts__subtitle">Nort West, South New Work,United State</div>
-				<div class="contacts__subtitle">+1 246-254-0569</div>
-				<div class="contacts__subtitle">Info@example.com</div>
-				<div class="contacts__links">
-					<a href="#"><img src="img/svg/fb.svg" alt=""></a>
-					<a href="#"><img src="img/svg/bask.svg" alt=""></a>
-					<a href="#"><img src="img/svg/be.svg" alt=""></a>
+
+			<div class="footer__input">
+				<input class="input__input" type="email" name="email" id="email" placeholder="email"
+					value="Enter your email">
+				<input class="input__submit" type="submit" value="Get Started">
+				<!-- <button class="input__button">Get Started</button> -->
+			</div>
+
+			<div class="footer__flex-container">
+				<div class="footer__contacts">
+					<div class="footer__subtitle">Spellon.</div>
+
+					<div class="footer__text">Nort West, South New Work,United State</div>
+					<div class="footer__text">+1 246-254-0569</div>
+					<div class="footer__text">Info@example.com</div>
+					<div class="footer__links">
+						<a href="#"><span class="icon-fb"></span></a>
+						<a href="#"><span class="icon-bask"></span></a>
+						<a href="#"><span class="icon-be"></span></a>
+					</div>
+				</div>
+				<div class="footer__nav">
+
+					<div class="footer__column">
+						<p class="footer__subtitle">Resources</p>
+						<a class="footer__text" href="#">Docs</a>
+						<a class="footer__text" href="#">Forums</a>
+						<a class="footer__text" href="#">Jobs</a>
+						<a class="footer__text" href="#">Join Discord</a>
+						<a class="footer__text" href="#">Consultants</a>
+					</div>
+					<div class="footer__column">
+						<p class="footer__subtitle">Company</p>
+						<a class="footer__text" href="#">About Us</a>
+						<a class="footer__text" href="#">Careers</a>
+						<a class="footer__text" href="#">Block Chain</a>
+						<a class="footer__text" href="#">Privacy Policy</a>
+						<a class="footer__text" href="#">Terms & Condition</a>
+					</div>
+					<div class="footer__column">
+						<p class="footer__subtitle">Legal</p>
+						<a class="footer__text" href="#">Terms of use</a>
+						<a class="footer__text" href="#">Privacy policy</a>
+						<a class="footer__text" href="#">GDPR/CCPA explained</a>
+						<a class="footer__text" href="#">Guidlines</a>
+					</div>
 				</div>
 			</div>
-			<div class="footer__nav">
-				<div class="footer__resources">Resources
-					<a href="#">Docs</a>
-					<a href="#">Forums</a>
-					<a href="#">Jobs</a>
-					<a href="#">Join Discord</a>
-					<a href="#">Consultants</a>
-				</div>
-				<div class="footer__company">Company
-					<a href="#">About Us</a>
-					<a href="#">Careers</a>
-					<a href="#">Block Chain</a>
-					<a href="#">Privacy Policy</a>
-					<a href="#">Terms & Condition</a>
-				</div>
-				<div class="footer__legal">Legal
-					<a href="#">Terms of use</a>
-					<a href="#">Privacy policy</a>
-					<a href="#">GDPR/CCPA explained</a>
-					<a href="#">Guidlines</a>
-				</div>
-			</div>
-			<div class="footer__copyright"><img src="img/svg/copyright.svg" alt=""> 2021 Hello All right reserved.</div>
+
+			<div class="footer__copyright">© 2021 Hello All right reserved.</div>
 		</div>
-	</footer>
+	</div>
 
 
 
