--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,16 @@
 				<button class="button button__reverse title__button">Discover in Video</button>
 			</div>
 
-			<div class="title__images">
-				<img src="img/title__left.png" alt="">
-				<img class="shadow" src="img/title__main.png" alt="">
-				<img src="img/title__right.png" alt="">
+			<div class="title__images container">
+				<div class="title__images__img">
+					<img src="img/title__left.png" alt="">
+				</div>
+				<div class="title__images__img">
+					<img class="shadow" src="img/title__main.png" alt="">
+				</div>
+				<div class="title__images__img">
+					<img src="img/title__right.png" alt="">
+				</div>
 			</div>
 		</div>
 
