--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 				<button class="button button__reverse title__button">Discover in Video</button>
 			</div>
 
-			<div class="title__images container">
+			<div class="container title__images">
 				<div class="title__images__img">
 					<img src="img/title__left.png" alt="">
 				</div>
@@ -95,7 +95,7 @@
 					</div>
 					<img src="img/about__develop.png" alt="">
 				</div>
-				<div class="about__features__element-reverse about__features__element">
+				<div class="about__features__element">
 					<img src="img/about__build.png" alt="">
 					<div class="about__features__text">
 						<h2>Build</h2>
@@ -146,10 +146,11 @@
 
 
 			<div class="footer__input">
-				<input class="input__input" type="email" name="email" id="email" placeholder="email"
-					value="Enter your email">
-				<input class="input__submit" type="submit" value="Get Started">
-				<!-- <button class="input__button">Get Started</button> -->
+				<input class="input__input" type="email" name="Enter your email" id="email" placeholder="Enter your email"
+					value="">
+				<!-- <input class="input__submit" type="submit" value="Get Started"> -->
+				<button class="input__submit">Get Started</button>
+
 			</div>
 
 			<div class="footer__flex-container">
