--- a/src/index.html
+++ b/src/index.html
@@ -17,17 +17,20 @@
 	<div class="container">
 		<header class="header">
 			<a href="" class="header__logo">HelloUI</a>
-			<div class="header__nav">
-				<a href="#">Docs</a>
-				<a href="#">Tools</a>
-				<a href="#">Features</a>
-				<a href="#">Pricing</a>
-				<a href="#">Jobs</a>
+			<div class="header__menu">
+				<div class="header__nav">
+					<a class="menu_item" href="#">Docs</a>
+					<a class="menu_item" href="#">Tools</a>
+					<a class="menu_item" href="#">Features</a>
+					<a class="menu_item" href="#">Pricing</a>
+					<a class="menu_item" href="#">Jobs</a>
+				</div>
+				<div class="header__login">
+					<a href="#">Sign in</a>
+					<button class="button">Try for Free</button>
+				</div>
 			</div>
-			<div class="header__login">
-				<a href="#">Sign in</a>
-				<button class="button">Try for Free</button>
-			</div>
+			<button class="button button__reverse header__hamburger">MENU</button>
 		</header>
 
 
@@ -198,7 +201,7 @@
 		</div>
 	</div>
 
-
+	<script src="js/script.js"></script>
 
 
 </body>
