--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.min.css">
 	<link rel="stylesheet" href="https://i.icomoon.io/public/temp/97714392b1/UntitledProject/style.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/svg/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/svg/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/svg/favicon-16x16.png">
+	<link rel="manifest" href="img/svg/site.webmanifest">
 
 	<title>Grow Up Sells</title>
 </head>
@@ -21,7 +25,7 @@
 				<div class="header__nav">
 					<a class="menu_item" href="#">Docs</a>
 					<a class="menu_item" href="#">Tools</a>
-					<a class="menu_item" href="#">Features</a>
+					<a class="menu_item" href="#features">Features</a>
 					<a class="menu_item" href="#">Pricing</a>
 					<a class="menu_item" href="#">Jobs</a>
 				</div>
@@ -74,7 +78,7 @@
 
 
 
-		<div class="about">
+		<div class="about" id="features">
 			<div class="about__title">Award-winning logistics services.Powered by<br>technology, delivered by experts.
 			</div>
 			<div class="about__subtitle">
